GHA Windows: use the -release triplet in vcpkg

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -365,7 +365,7 @@ jobs:
             cmake-generator: 'Visual Studio 16 2019'
             msvc-year: '2019'
             vcvars-script: 'vcvars32.bat'
-            vcpkg-triplet: x86-windows # for readline
+            vcpkg-triplet: x86-windows-release
             use-qtwebengine: 'ON' # might need to be turned off for MinGW
             ableton-link: 'ON' # might need to be turned off for MinGW
             artifact-suffix: 'win32' # set if needed - will trigger artifact upload
@@ -382,7 +382,7 @@ jobs:
             cmake-generator: 'Visual Studio 16 2019'
             msvc-year: '2019'
             vcvars-script: 'vcvars64.bat'
-            vcpkg-triplet: x64-windows # for readline
+            vcpkg-triplet: x64-windows-release
             use-qtwebengine: 'ON' # might need to be turned off for MinGW
             ableton-link: 'ON' # might need to be turned off for MinGW
             artifact-suffix: 'win64' # set if needed - will trigger artifact upload
