--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -182,6 +182,15 @@ if(NOVA_SIMD)
 endif()
 
 if(SNDFILE_FOUND)
+	if(SNDFILE_HAS_VORBIS)
+		target_compile_definitions(libscsynth PUBLIC SNDFILE_HAS_VORBIS)
+	endif()
+	if(SNDFILE_HAS_OPUS)
+		target_compile_definitions(libscsynth PUBLIC SNDFILE_HAS_OPUS)
+	endif()
+	if(SNDFILE_HAS_MPEG)
+		target_compile_definitions(libscsynth PUBLIC SNDFILE_HAS_MPEG)
+	endif()
 	target_link_libraries(libscsynth ${SNDFILE_LIBRARIES})
 	target_include_directories(libscsynth PUBLIC ${SNDFILE_INCLUDE_DIR})
 elseif(NOT NO_LIBSNDFILE)
