--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -172,6 +172,15 @@ find_package(Sndfile)
 if (NOT SNDFILE_FOUND)
     message(SEND_ERROR "Cannot find libsndfile")
 else()
+    if(SNDFILE_HAS_VORBIS)
+        target_compile_definitions(libsupernova PUBLIC SNDFILE_HAS_VORBIS)
+    endif()
+    if(SNDFILE_HAS_OPUS)
+        target_compile_definitions(libsupernova PUBLIC SNDFILE_HAS_OPUS)
+    endif()
+    if(SNDFILE_HAS_MPEG)
+        target_compile_definitions(libsupernova PUBLIC SNDFILE_HAS_MPEG)
+    endif()
     target_link_libraries(libsupernova ${SNDFILE_LIBRARIES})
     target_include_directories(libsupernova PUBLIC ${SNDFILE_INCLUDE_DIR})
 endif()
