--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -191,9 +191,9 @@ jobs:
         include:
 
           - job-name: ''
-            os-version: '10.15'
-            xcode-version: '11.7'
-            deployment-target: '10.13' # Qt 5.15 runs on macOS 10.13 and newer
+            os-version: '11'
+            xcode-version: '12.4'
+            deployment-target: '10.14' # Qt 5.15 runs on macOS 10.13 and newer; however homebrew build of Qt on macOS 11 only supports 10.14+
             use-syslibs: false
             shared-libscsynth: false
             build-libsndfile: true
@@ -202,8 +202,8 @@ jobs:
             verify-app: true
 
           - job-name: 'legacy'
-            os-version: '10.15'
-            xcode-version: '10.3'
+            os-version: '11'
+            xcode-version: '12.4'
             qt-version: '5.9.9' # will use qt from aqtinstall
             deployment-target: '10.10'
             use-syslibs: false
@@ -213,17 +213,17 @@ jobs:
             artifact-suffix: 'macOS-legacy' # set if needed - will trigger artifact upload
 
           - job-name: 'use system libraries'
-            os-version: '10.15'
-            xcode-version: '11.7'
-            deployment-target: '10.15'
+            os-version: '12'
+            xcode-version: '13.4.1'
+            deployment-target: '10.14'
             use-syslibs: true
             shared-libscsynth: false
             verify-app: true
 
           - job-name: 'shared libscsynth'
-            os-version: '10.15'
-            xcode-version: '11.7'
-            deployment-target: '10.13'
+            os-version: '12'
+            xcode-version: '13.4.1'
+            deployment-target: '10.14'
             use-syslibs: false
             shared-libscsynth: true
             verify-app: true
@@ -520,7 +520,7 @@ jobs:
         include:
 
           - name: macOS
-            runs-on: macos-10.15
+            runs-on: macos-11
             sclang: 'build/Install/SuperCollider/SuperCollider.app/Contents/MacOS/sclang'
             artifact-suffix: macOS
             artifact-extension: '.dmg'
