GHA: use restore-keys for homebrew cache

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -290,7 +290,6 @@ jobs:
         id: current-date
         run: |
           echo "::set-output name=stamp::$(date '+%Y-%m-%d')"
-          echo "::set-output name=week::$(date '+%V')"
       - name: cache ccache
         uses: actions/cache@v3
         with:
@@ -302,7 +301,8 @@ jobs:
         id: cache-homebrew
         with:
           path: ~/Library/Caches/Homebrew/downloads
-          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-homebrew-${{ steps.current-date.outputs.week }}
+          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-homebrew-${{ steps.current-date.outputs.stamp }}
+          restore-keys: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-homebrew-
       - name: cache qt universal binary
         id: cache-qt-universal
         uses: actions/cache@v3
@@ -635,7 +635,6 @@ jobs:
         id: current-date
         run: |
           echo "::set-output name=stamp::$(date '+%Y-%m-%d')"
-          echo "::set-output name=week::$(date '+%V')"
       - name: cache vcpkg
         if: matrix.vcpkg-triplet
         uses: actions/cache@v3
