--- a/HelpSource/themes/Dockerfile
+++ b/HelpSource/themes/Dockerfile
@@ -1,3 +1,6 @@
+# IF YOU CHANGE ANY VERSIONS HERE ALSO CHANGE THEM IN THE CI/CD STEP
+# LOCATED AT .github/workflows/actions.yml
+
 FROM node:lts-alpine3.16
 
 RUN npm instal -g sass@1.54.4
