--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -190,41 +190,46 @@ jobs:
       matrix:
         include:
 
-          - job-name: ''
+          - job-name: 'x64'
             os-version: '11'
             xcode-version: '12.4'
             deployment-target: '10.14' # Qt 5.15 runs on macOS 10.13 and newer; however homebrew build of Qt on macOS 11 only supports 10.14+
+            cmake-architectures: x86_64
             use-syslibs: false
             shared-libscsynth: false
+            system-portaudio: true
             build-libsndfile: true
             vcpkg-triplet: x64-osx-release-supercollider # required for build-libsndfile
-            artifact-suffix: 'macOS' # set if needed - will trigger artifact upload
+            artifact-suffix: 'macOS-x64' # set if needed - will trigger artifact upload
             verify-app: true
 
-          - job-name: 'legacy'
+          - job-name: 'x64 legacy'
             os-version: '11'
             xcode-version: '12.4'
             qt-version: '5.9.9' # will use qt from aqtinstall
             deployment-target: '10.10'
+            cmake-architectures: x86_64
             use-syslibs: false
             shared-libscsynth: false
             build-libsndfile: true
             system-portaudio: false
             vcpkg-triplet: x64-osx-release-supercollider # required for build-libsndfile
-            artifact-suffix: 'macOS-legacy' # set if needed - will trigger artifact upload
+            artifact-suffix: 'macOS-x64-legacy' # set if needed - will trigger artifact upload
 
-          - job-name: 'use system libraries'
+          - job-name: 'x64 use system libraries'
             os-version: '12'
             xcode-version: '13.4.1'
             deployment-target: '10.14'
+            cmake-architectures: x86_64
             use-syslibs: true
             shared-libscsynth: false
             verify-app: true
 
-          - job-name: 'shared libscsynth'
+          - job-name: 'x64 shared libscsynth'
             os-version: '12'
             xcode-version: '13.4.1'
             deployment-target: '10.14'
+            cmake-architectures: x86_64
             use-syslibs: false
             shared-libscsynth: true
             verify-app: true
@@ -241,6 +246,7 @@ jobs:
       ARTIFACT_FILE: 'SuperCollider-${{ needs.lint.outputs.sc-version }}-${{ matrix.artifact-suffix }}.dmg'
       DEVELOPER_DIR: '/Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer'
       MACOSX_DEPLOYMENT_TARGET: '${{ matrix.deployment-target }}'
+      CMAKE_OSX_ARCHITECTURES: '${{ matrix.cmake-architectures }}'
     steps:
       - uses: actions/checkout@v2
         with:
@@ -254,14 +260,14 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/Library/Caches/ccache
-          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ steps.current-date.outputs.stamp }}
-          restore-keys: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-
+          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-${{ steps.current-date.outputs.stamp }}
+          restore-keys: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-
       - name: cache homebrew downloads
         uses: actions/cache@v2
         id: cache-homebrew
         with:
           path: ~/Library/Caches/Homebrew/downloads
-          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-homebrew-${{ steps.current-date.outputs.week }}
+          key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-homebrew-${{ steps.current-date.outputs.week }}
       - name: cache qt
         id: cache-qt
         uses: actions/cache@v1
@@ -294,7 +300,7 @@ jobs:
         if: env.USE_SYSLIBS == 'true'
         run: brew install yaml-cpp boost
       - name: install qt from homebrew
-        if: '!matrix.qt-version'
+        if: matrix.cmake-architectures == 'x86_64' && '!matrix.qt-version' 
         run: brew install qt5
       - name: install qt using aqtinstall
         uses: jurplel/install-qt-action@v2
@@ -526,7 +532,7 @@ jobs:
           - name: macOS
             runs-on: macos-11
             sclang: 'build/Install/SuperCollider/SuperCollider.app/Contents/MacOS/sclang'
-            artifact-suffix: macOS
+            artifact-suffix: macOS-x64
             artifact-extension: '.dmg'
 
           - name: Linux
@@ -615,7 +621,7 @@ jobs:
       matrix:
         include:
 
-          - artifact-suffix: macOS
+          - artifact-suffix: macOS-x64
             s3-os-name: osx
             s3-artifact-suffx: ''
             s3-artifact-extension: 'dmg'
@@ -723,8 +729,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS.dmg/*
-            ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-legacy.dmg/*
+            ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-x64.dmg/*
+            ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-x64-legacy.dmg/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-win32-installer/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-win64-installer/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-win32/*
