--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -249,6 +249,8 @@ jobs:
       DEVELOPER_DIR: '/Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer'
       MACOSX_DEPLOYMENT_TARGET: '${{ matrix.deployment-target }}'
       CMAKE_OSX_ARCHITECTURES: '${{ matrix.cmake-architectures }}'
+      QT_UNIVERSAL_PREP_DIR: ${{ github.workspace }}/qt-prepare
+      QT_UNIVERSAL_WORK_DIR: ${{ github.workspace }}/qt-prepare/tmp # needs to be under QT_UNIVERSAL_PREP_DIR for caching
     steps:
       - uses: actions/checkout@v2
         with:
@@ -277,6 +279,13 @@ jobs:
         with:
           path: ../Qt
           key: ${{ runner.os }}-v1-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-qt${{ matrix.qt-version }}
+      - name: cache qt universal binary
+        id: cache-qt-universal
+        uses: actions/cache@v3
+        if: matrix.cmake-architectures != 'x86_64' && '!matrix.qt-version'
+        with:
+          path: ${{ env.QT_UNIVERSAL_WORK_DIR }}
+          key: ${{ runner.os }}-v1-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.deployment-target }}-${{ matrix.vcpkg-triplet }}
       - name: cache vcpkg
         if: matrix.vcpkg-triplet
         uses: actions/cache@v2
@@ -314,6 +323,160 @@ jobs:
       - name: install qt from homebrew
         if: matrix.cmake-architectures == 'x86_64' && '!matrix.qt-version' 
         run: brew install qt5
+      - name: prepare qt universal binary # this can be cached
+        if: matrix.cmake-architectures != 'x86_64' && '!matrix.qt-version' && steps.cache-qt-universal.outputs.cache-hit != 'true'
+        run: |
+          # this is a workaround to create a universal x64/arm64 binary of qt5
+          # it's not a fully-featured universal binary, since qt's dependencies are still single architecture
+          # once we support Qt6, you should be able to drop this and use official Qt6 binaries instead, which are universal (x64 + arm64)
+          mkdir $QT_UNIVERSAL_PREP_DIR && cd $QT_UNIVERSAL_PREP_DIR
+
+          packages_to_process=( freetype gettext giflib glib jpeg-turbo libpng libtiff pcre pcre2 webp readline qt@5) # note it needs to be qt@5, not qt5 here
+
+          DOWNLOAD_PATH="${QT_UNIVERSAL_PREP_DIR}/downloads"
+          TEMP_PATH="${QT_UNIVERSAL_WORK_DIR}"
+
+          echo "making downloads folder "$DOWNLOAD_PATH
+          mkdir -p "$DOWNLOAD_PATH"
+          mkdir -p "$TEMP_PATH"
+
+          HOMEBREW_PREFIX=`brew --prefix`
+          echo "homebrew prefix: "$HOMEBREW_PREFIX
+
+          HOMEBREW_CELLAR=`brew --cellar`
+          echo "homebrew cellar: "$HOMEBREW_CELLAR
+
+          BOTTLE_ID="arm64_big_sur" # TODO: detect big_sur / monterey based on the host OS 
+
+          get_bottle_sha () { # takes name
+              brew cat --formula ${1} | grep "$BOTTLE_ID" | awk '{print $NF }' | sed 's/\"//g'
+          }
+
+          download_bottle () { #takes name
+              name=$1
+              sha=$(get_bottle_sha $name)
+              os_id=$BOTTLE_ID
+              destination=$DOWNLOAD_PATH
+              url="https://ghcr.io/v2/homebrew/core/${name/@//}/blobs/sha256:${sha}"
+              filename="${name}.${os_id}.bottle.tar.gz"
+              dest_full_path="${destination}/${filename}"
+              if [[ -f "$dest_full_path" ]]; then
+                  # TODO: check if sha matches
+                  echo "$filename already exists, not downloading"
+              else
+                  echo "downloading ${filename} from ${url}"
+                  curl -f -L -H "Authorization: Bearer QQ==" -o "$dest_full_path" "$url"
+              fi
+          }
+
+          decompress_bottle () { # takes name
+              name=$1
+              os_id=$BOTTLE_ID
+              source=$DOWNLOAD_PATH
+              destination=$TEMP_PATH
+              filename="${name}.${os_id}.bottle.tar.gz"
+              echo "decompressing ${filename}"
+              tar xf "${source}/${filename}" --directory "$destination"
+          }
+
+          set_loader_paths () { # takes name
+              name=$1
+              find "${TEMP_PATH}/${1}" -print0 | while IFS= read -r -d '' file
+              do
+                  if [ -f "$file" ]; then
+                      file_type_string=`file -bh "${file}"`
+                      if [[ $file_type_string == *"shared library"* ]] || [[ $file_type_string == "Mach-O"*"executable"* ]]; then
+                          loader_paths=`otool -XL "$file" | awk '{print $1 }'`
+                          install_name=`otool -XD "$file"`
+                          echo "--- ${file} ---"
+                          basename=$(basename -- "$file")
+                          if [[ $install_name == *"@@HOMEBREW_PREFIX@@"* ]]; then
+                              corrected_path=`echo "$install_name" | sed s~@@HOMEBREW_PREFIX@@~${HOMEBREW_PREFIX}~`
+                              echo "${basename}: setting install name to ${corrected_path}"
+                              install_name_tool -id "$corrected_path" "$file" 2>/dev/null
+                          fi
+                          if [[ $install_name == *"@@HOMEBREW_CELLAR@@"* ]]; then
+                              corrected_path=`echo "$install_name" | sed s~@@HOMEBREW_CELLAR@@~${HOMEBREW_CELLAR}~`
+                              echo "${basename}: setting install name to ${corrected_path}"
+                              install_name_tool -id "$corrected_path" "$file" 2>/dev/null
+                          fi
+                          for this_path in $loader_paths
+                          do
+                              if [[ $this_path == *"@@HOMEBREW_PREFIX@@"* ]]; then
+                                  # echo $this_path
+                                  corrected_path=`echo "$this_path" | sed s~@@HOMEBREW_PREFIX@@~${HOMEBREW_PREFIX}~`
+                                  # echo $corrected_path
+                                  echo "${this_path}: changing path to ${corrected_path}"
+                                  install_name_tool -change "$this_path" "$corrected_path" "$file" 2>/dev/null
+                              fi
+                              if [[ $this_path == *"@@HOMEBREW_CELLAR@@"* ]]; then
+                                  # echo $this_path
+                                  corrected_path=`echo "$this_path" | sed s~@@HOMEBREW_CELLAR@@~${HOMEBREW_CELLAR}~`
+                                  # echo $corrected_path
+                                  echo "${this_path}: changing path to ${corrected_path}"
+                                  install_name_tool -change "$this_path" "$corrected_path" "$file" 2>/dev/null
+                              fi
+                          done
+                      fi
+                  fi
+              done
+          }
+
+          for package in "${packages_to_process[@]}"
+          do
+              echo "--- processing ${package} ---"
+              download_bottle $package
+              decompress_bottle $package
+              set_loader_paths $package
+          done
+
+      - name: install qt universal binary
+        if: matrix.cmake-architectures != 'x86_64' && '!matrix.qt-version'
+        run: |
+          cd $QT_UNIVERSAL_PREP_DIR
+
+          brew install qt5 # we need to make sure homebrew knows about qt installation; this does nothing when not using cache
+
+          # prepare universal versions of the dependencies
+
+          packages_to_process=( freetype gettext giflib glib jpeg-turbo libpng libtiff pcre pcre2 webp readline qt@5)
+
+          DOWNLOAD_PATH="${QT_UNIVERSAL_PREP_DIR}/downloads"
+          TEMP_PATH="${QT_UNIVERSAL_WORK_DIR}"
+
+          # echo "making downloads folder "$DOWNLOAD_PATH
+          # mkdir -p "$DOWNLOAD_PATH"
+          # mkdir -p "$TEMP_PATH"
+
+          combine_libraries () { # takes name
+              name=$1
+              base_path="${TEMP_PATH}/${1}/"
+              varname=`ls "${base_path}/"` # we assume there's only one subdirectory
+              base_src_path="${base_path}/${varname}"
+              base_dst_path=`brew --prefix ${name}`
+              find  "$base_src_path" -print0 | while IFS= read -r -d '' file
+              do
+                  if [ -f "$file" ] && [ ! -h "$file" ]; then
+                      file_type_string=`file -bh "${file}"`
+                      if [[ $file_type_string == *"current ar archive"* ]] || [[ $file_type_string == *"shared library"* ]] || [[ $file_type_string == "Mach-O"*"executable"* ]]; then
+                          # echo "--- ${file} ---"
+                          basename=$(basename -- "$file")
+                          base_relative_path=${file##$base_src_path}
+                          dst_full_path="${base_dst_path}${base_relative_path}"
+                          if [ -f "$dst_full_path" ]; then
+                              echo "combining ${file} and ${dst_full_path}"
+                              lipo "$file" "$dst_full_path" -create -output "$dst_full_path"
+                          fi
+                      fi
+                  fi
+              done
+          }
+
+          for package in "${packages_to_process[@]}"
+          do
+              echo "--- processing ${package} ---"
+              combine_libraries $package
+          done
       - name: install qt using aqtinstall
         uses: jurplel/install-qt-action@v2
         if: matrix.qt-version
