GHA macOS: add universal build

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -220,6 +220,21 @@ jobs:
             artifact-suffix: 'macOS-arm64' # set if needed - will trigger artifact upload
             verify-app: true
 
+          - job-name: 'universal'
+            os-version: '11'
+            xcode-version: '12.4'
+            deployment-target: '10.14'
+            cmake-architectures: 'x86_64;arm64'
+            use-syslibs: false
+            shared-libscsynth: false
+            system-portaudio: false
+            build-libsndfile: true
+            build-readline: true
+            build-fftw: true
+            vcpkg-triplet: x64-arm64-osx-release-supercollider
+            artifact-suffix: 'macOS-universal'
+            verify-app: true
+
           - job-name: 'x64 legacy'
             os-version: '11'
             xcode-version: '12.4'
@@ -924,6 +939,7 @@ jobs:
         with:
           files: |
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-x64.dmg/*
+            ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-universal.dmg/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-arm64.dmg/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-macOS-x64-legacy.dmg/*
             ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE_PREFIX }}-win32-installer/*
