Create Standalone Directory when needed and copy sample resources
Signed-off-by: Scott Wilson <i@scottwilson.ca>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -545,6 +545,9 @@ if(NOT APPLE)
 	install(DIRECTORY examples DESTINATION ${auxresourcesdir})
 elseif(APPLE)
 	install(DIRECTORY examples DESTINATION ${auxresourcesdir})
+	if(STANDALONE)
+		install(DIRECTORY Standalone DESTINATION ${auxresourcesdir})
+	endif()
 endif()
 
 if (WIN32)
