upgrade to boost 1.80.0 step 4b: experiment to see if this solves mac legacy build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ if (${CMAKE_COMPILER_IS_GNUCXX})
 		if ("${_gcc_version_info}" MATCHES "Apple")
 			add_definitions("-fpascal-strings" "-fno-aligned-allocation")
 		endif()
-		add_definitions("-D_REENTRANT")
+		add_definitions("-D_REENTRANT" "-fno-aligned-allocation")
 	elseif(NOT (WIN32 AND NOT CYGWIN))
 		add_definitions("-pthread")
 	endif()
