upgrade to boost 1.80.0 step 4: experiment to see if this solves mac legacy build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ if (${CMAKE_COMPILER_IS_GNUCXX})
 	if(APPLE)
 		exec_program(${CMAKE_CXX_COMPILER} ARGS --version OUTPUT_VARIABLE _gcc_version_info)
 		if ("${_gcc_version_info}" MATCHES "Apple")
-			add_definitions("-fpascal-strings")
+			add_definitions("-fpascal-strings" "-fno-aligned-allocation")
 		endif()
 		add_definitions("-D_REENTRANT")
 	elseif(NOT (WIN32 AND NOT CYGWIN))
