GHA: add tests on Windows

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -580,7 +580,12 @@ jobs:
             sclang: 'build/Install/bin/sclang'
             artifact-suffix: linux-bionic-gcc10
 
-    needs: [lint, Linux, macOS] # unfortunately we can't use matrix expression here to make Linux test depend only on Linux build
+          - name: Windows
+            runs-on: windows-2022
+            sclang: 'build/Install/SuperCollider/sclang'
+            artifact-suffix: win64
+
+    needs: [lint, Linux, macOS, Windows] # unfortunately we can't use matrix expression here to make Linux test depend only on Linux build
     runs-on: '${{ matrix.runs-on }}'
     name: 'test on ${{ matrix.name }}'
     env:
@@ -640,6 +645,23 @@ jobs:
           HOMEBREW_NO_AUTO_UPDATE: 1
           HOMEBREW_NO_INSTALL_CLEANUP: 1
         run: brew install coreutils # to get 'timeout' utility
+      - name: setup Windows environment
+        if: runner.os == 'Windows'
+        shell: bash
+        run: |
+          # install jack
+          # even though SC on Windows doesn't use JACK directly
+          # it will use JackRouter ASIO device
+          curl -O -J -L https://github.com/jackaudio/jack2-releases/releases/download/v1.9.22/jack2-win64-v1.9.22.exe
+
+          echo "installing JACK2"
+          ./jack2-win64-v1.9.22.exe //TYPE="router" //SILENT //SUPPRESSMSGBOXES
+
+          # add bin to PATH so that scsynth can be found
+          echo "$INSTALL_PATH/SuperCollider" >> $GITHUB_PATH
+
+          # start jack
+          /c/Program\ Files/JACK2/jackd.exe --no-realtime -d dummy &
       - name: run tests
         shell: bash
         run: |
