GHA: update ccache on Windows
ccache was updated in chocolatey past version 4.8, which did not work properly for MSVC, so we can un-pin the version now.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -487,7 +487,7 @@ jobs:
       - name: install ccache
         shell: bash
         run: |
-          choco install ccache --version=4.7.5 --no-progress # version is pinned due to issues with caching msvc in 4.8; unpin after ccache is updated to 4.8.1 in chocolatey
+          choco install ccache --no-progress
           echo "`echo c:/ProgramData/chocolatey/lib/ccache/tools/ccache*`" >> $GITHUB_PATH # put the direct path before the path of the choco's "shim" (link subsitute)
       - name: install libsndfile
         shell: bash
