testsuite/lang: init boost.test

--- a/testsuite/server/CMakeLists.txt
+++ b/testsuite/server/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(boost_test STATIC boost_test.cpp)
-target_include_directories(boost_test PUBLIC ${boost_include_dirs})
+add_library(server_boost_test STATIC boost_test.cpp)
+target_include_directories(server_boost_test PUBLIC ${boost_include_dirs})
 
 add_subdirectory(scsynth)
 if (SUPERNOVA)
